--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,5 @@
 .footer__container {
-    margin: 1rem 0 0 0;
+    margin: 1rem 0rem 0 0rem;
     background-color: var(--color-one);
     border: solid 1px var(--color-eigth);
     border-radius: 6px;
@@ -14,12 +14,12 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin: 1rem 0rem 0 1rem;
+    margin: 1rem;
     padding: 1.25rem;
 }
 
 .footer__icon {
-    margin: 1rem 1rem 0 0;
+    margin: 1rem 0 0 0;
     padding: 1.25rem;
 }
 
@@ -52,6 +52,7 @@
 
 .automatic__message {
     margin: 2rem 0 3rem 0;
+    padding: 1rem;
 
     display: flex;
     flex-direction: column;
